WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34793
[Qt] QScriptValue::toBool problem
https://bugs.webkit.org/show_bug.cgi?id=34793
Summary
[Qt] QScriptValue::toBool problem
Jędrzej Nowacki
Reported
2010-02-10 04:02:08 PST
QScriptValue::toBool (and toBoolean) returns a bad value for a numbers like 0, NaN and for an empty strings.
Attachments
Fix v1
(17.43 KB, patch)
2010-02-10 04:08 PST
,
Jędrzej Nowacki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jędrzej Nowacki
Comment 1
2010-02-10 04:08:54 PST
Created
attachment 48485
[details]
Fix v1
Simon Hausmann
Comment 2
2010-02-10 04:26:49 PST
Comment on
attachment 48485
[details]
Fix v1 LGTM
WebKit Commit Bot
Comment 3
2010-02-10 09:55:18 PST
Comment on
attachment 48485
[details]
Fix v1 Clearing flags on attachment: 48485 Committed
r54605
: <
http://trac.webkit.org/changeset/54605
>
WebKit Commit Bot
Comment 4
2010-02-10 09:55:23 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug