2010-02-10  Jedrzej Nowacki  <jedrzej.nowacki@nokia.com>

Reviewed by Simon Hausmann.

        Fix QScriptValue::toBool.

        Fix ECMA compliance in the QScriptValue for values like 0, NaN and
        empty strings.

        [Qt] QScriptValue::toBool problem
        https://bugs.webkit.org/show_bug.cgi?id=34793

        * qt/api/qscriptvalue_p.h:
        (QScriptValuePrivate::toBool):
        * qt/tests/qscriptvalue/tst_qscriptvalue.h:
        * qt/tests/qscriptvalue/tst_qscriptvalue_generated.cpp:
        (tst_QScriptValue::toBool_initData):
        (tst_QScriptValue::toBool_makeData):
        (tst_QScriptValue::toBool_test):
        (tst_QScriptValue::toBoolean_initData):
        (tst_QScriptValue::toBoolean_makeData):
        (tst_QScriptValue::toBoolean_test):

Canonical link: https://commits.webkit.org/45917@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54605 268f45cc-cd09-0410-ab3c-d52691b4dbfc